<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BookAddActivity"
    tools:showIn="@layout/activity_book_add">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_add_autocomplete_margin"
        android:layout_marginStart="@dimen/book_add_autocomplete_margin"
        android:layout_marginTop="@dimen/book_add_autocomplete_margin"
        android:hint="@string/search_hint"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/search_hint" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:layout_marginStart="@dimen/book_details_margin"
        android:layout_marginTop="@dimen/book_details_margin"
        android:text="@string/book_details"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:layout_marginStart="@dimen/book_details_margin"
        android:layout_marginTop="@dimen/book_details_margin"
        android:hint="@string/book_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:layout_marginStart="@dimen/book_details_margin"
        android:layout_marginTop="@dimen/book_details_margin"
        android:hint="@string/book_author"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:layout_marginStart="@dimen/cover_photo_margin_start"
        android:layout_marginTop="@dimen/book_details_margin"
        android:text="@string/cover_photo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:paddingEnd="@dimen/take_photo_button_padding_end"
        android:text="@string/take_photo"
        android:contentDescription="@string/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@android:drawable/ic_menu_camera"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ImageView
        android:id="@+id/cover_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cover_photo_margin_top"
        android:contentDescription="@string/cover_photo"
        app:layout_constraintEnd_toEndOf="@+id/take_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/take_photo"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/save"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/book_details_margin"
        android:layout_marginStart="@dimen/book_details_margin"
        android:layout_marginTop="@dimen/book_details_margin"
        android:text="@string/save_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/cover_photo" />

</android.support.constraint.ConstraintLayout>