<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.bookcompanion.BookDetailActivity"
    tools:ignore="MergeRootFrame">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <FrameLayout
            android:layout_marginBottom="@dimen/note_list_frame_margin"
            android:paddingBottom="@dimen/note_list_frame_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.udacity.bookcompanion.BookDetailActivity"
                tools:ignore="MergeRootFrame">

                <!--android:background="@null"-->

                <android.support.v7.widget.RecyclerView
                android:id="@+id/note_list"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/item_margin"
                />


            <TextView
                android:id="@+id/tv_error_message_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/error_message_padding"
                android:text="@string/empty_message"
                android:textSize="20sp"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="42dp"
                android:layout_width="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
            </android.support.design.widget.CoordinatorLayout>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:layout_margin="6dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Spinner
                    android:id="@+id/note_type_spinner"
                    android:layout_weight = "0"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />


                <EditText
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight = "1"
                    android:hint="@string/note_hint"
                    />

                <ImageButton
                    android:id="@+id/takePhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_weight = "0"
                    android:layout_height = "match_parent"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:contentDescription="@string/take_photo"
                    android:backgroundTint="@color/white"
                    android:tint="@color/colorAccent"
                    android:visibility="gone"
                    />

                <ImageButton
                    android:id="@+id/saveNoteButton"
                    android:layout_width="wrap_content"
                    android:layout_weight = "0"
                    android:layout_height = "match_parent"
                    app:srcCompat="@drawable/ic_send_black_24dp"
                    android:contentDescription="@string/save_note"
                    android:clickable="false"
                    android:backgroundTint="@color/white"
                    android:tint="@color/colorAccent"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>